Add swagger document
