# handlers/get.go
@@ -6,6 +6,11 @@ import (
 	"github.com/sanprasirt/product-api/data"
 )
 
+// swagger:route GET /products products listProducts
+// Return a list of products from the database
+// responses:
+//	200: productsResponse
+
 // ListAll handles GET requests and returns all current products
 func (p *Products) ListAll(rw http.ResponseWriter, r *http.Request) {
 	p.l.Println("[DEBUG] get all records")
@@ -16,6 +21,12 @@ func (p *Products) ListAll(rw http.ResponseWriter, r *http.Request) {
 		p.l.Println("[ERROR] serializing product", err)
 	}
 }
+
+// swagger:route GET /products/{id} products listSingle
+// Return a list of products from the database
+// responses:
+//	200: productResponse
+//	404: errorResponse
 
 // ListSingle handles GET requests returns one product
 func (p *Products) ListSingle(rw http.ResponseWriter, r *http.Request) {
