# handlers/post.go
@@ -6,6 +6,14 @@ import (
 	"github.com/sanprasirt/product-api/data"
 )
 
+// swagger:route POST /products products createProduct
+// Create a new product
+//
+// responses:
+//	200: productResponse
+//  422: errorValidation
+//  501: errorResponse
+
 // Create handles POST requests to add new products
 func (p *Products) Create(rw http.ResponseWriter, r *http.Request) {
 	// fetch the product from the context
