# handlers/products.go
@@ -1,18 +1,3 @@
-// Package classification of Product API
-//
-// Documentation for Product API
-//
-//		Schemes: http
-//		BasePath: /
-//		Version: 1.0.0
-//
-//		Consumes:
-//		- application/json
-//
-//		Produces:
-//		- application/json
-//
-// swagger:meta
 package handlers
 
 import (
