# handlers/put.go
@@ -6,6 +6,14 @@ import (
 	"github.com/sanprasirt/product-api/data"
 )
 
+// swagger:route PUT /products products updateProduct
+// Update a products details
+//
+// responses:
+//	201: noContentResponse
+//  404: errorResponse
+//  422: errorValidation
+
 // Update handles PUT requests to update products
 func (p *Products) Update(rw http.ResponseWriter, r *http.Request) {
 	// fetch the product from the context
